{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 32,
  "lineage": "7118bca1-cc13-0d17-d8ef-cab1a23ffb6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e3efb9ce04872caf",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-213-170-241.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.170.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04c39df8c8176ed5c",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-136-171-59.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.171.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9d733050c9f5365",
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:instance/i-00c81aaa1c679ab61",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c81aaa1c679ab61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "hacker",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0501ad5bdb8381593",
            "private_dns": "ip-10-0-0-11.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.11",
            "public_ip": "13.228.183.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089bf481d88754fd2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbc31d628d87af64",
            "tags": {
              "name": "New Ubuntu Instance for Lambda Test"
            },
            "tags_all": {
              "name": "New Ubuntu Instance for Lambda Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a4a1104d97b589c8"
            ]
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lambda_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:internet-gateway/igw-0609738a017cc0362",
            "id": "igw-0609738a017cc0362",
            "owner_id": "331224114753",
            "tags": {
              "name": "IGW_For_Lambda"
            },
            "tags_all": {
              "name": "IGW_For_Lambda"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3efb9ce04872caf",
            "connectivity_type": "public",
            "id": "nat-012438643bbb14239",
            "network_interface_id": "eni-01f9f43df0b6aad38",
            "private_ip": "10.0.0.37",
            "public_ip": "13.213.170.241",
            "subnet_id": "subnet-0d107fd0a6f64aa01",
            "tags": {
              "name": "Nat Gateway for Private Subnets"
            },
            "tags_all": {
              "name": "Nat Gateway for Private Subnets"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lambda_igw",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c39df8c8176ed5c",
            "connectivity_type": "public",
            "id": "nat-065031d7bb17be07e",
            "network_interface_id": "eni-06aa7960444b94342",
            "private_ip": "10.0.0.58",
            "public_ip": "18.136.171.59",
            "subnet_id": "subnet-01407d5ae6a465b04",
            "tags": {
              "name": "Nat Gateway for Private Subnets"
            },
            "tags_all": {
              "name": "Nat Gateway for Private Subnets"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lambda_igw",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01dba13e5a39487741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012438643bbb14239",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01dba13e5a3948774",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lambda_igw",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd52c0b340a0135b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065031d7bb17be07e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd52c0b340a0135b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lambda_igw",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0609738a017cc0362",
            "id": "r-rtb-0b7ce756dbbbbee9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7ce756dbbbbee9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "aws_internet_gateway.lambda_igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:route-table/rtb-01dba13e5a3948774",
            "id": "rtb-01dba13e5a3948774",
            "owner_id": "331224114753",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "private route table for VPC"
            },
            "tags_all": {
              "name": "private route table for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:route-table/rtb-0bd52c0b340a0135b",
            "id": "rtb-0bd52c0b340a0135b",
            "owner_id": "331224114753",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "private route table for VPC"
            },
            "tags_all": {
              "name": "private route table for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:route-table/rtb-0b7ce756dbbbbee9c",
            "id": "rtb-0b7ce756dbbbbee9c",
            "owner_id": "331224114753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0609738a017cc0362",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public route table for VPC"
            },
            "tags_all": {
              "name": "public route table for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ef44475c810bdb",
            "route_table_id": "rtb-01dba13e5a3948774",
            "subnet_id": "subnet-0fbc31d628d87af64"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00358c83a07236cf8",
            "route_table_id": "rtb-0bd52c0b340a0135b",
            "subnet_id": "subnet-05b9ce4cc5fd9b903"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063992a1adcde71b0",
            "route_table_id": "rtb-0b7ce756dbbbbee9c",
            "subnet_id": "subnet-0d107fd0a6f64aa01"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07946d91361ed6b2e",
            "route_table_id": "rtb-0b7ce756dbbbbee9c",
            "subnet_id": "subnet-01407d5ae6a465b04"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntu_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:security-group/sg-0d52041cbd4a1403b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d52041cbd4a1403b",
            "ingress": [],
            "name": "terraform-20210620200803149600000001",
            "name_prefix": "terraform-",
            "owner_id": "331224114753",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Security Group for Lambda Test Instance"
            },
            "tags_all": {
              "name": "Security Group for Lambda Test Instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:subnet/subnet-0fbc31d628d87af64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0fbc31d628d87af64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331224114753",
            "tags": {
              "name": "Private Subnet for VPC"
            },
            "tags_all": {
              "name": "Private Subnet for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:subnet/subnet-05b9ce4cc5fd9b903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-05b9ce4cc5fd9b903",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331224114753",
            "tags": {
              "name": "Private Subnet for VPC"
            },
            "tags_all": {
              "name": "Private Subnet for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:subnet/subnet-0d107fd0a6f64aa01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.32/28",
            "id": "subnet-0d107fd0a6f64aa01",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331224114753",
            "tags": {
              "name": "Public Subnet for VPC"
            },
            "tags_all": {
              "name": "Public Subnet for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:subnet/subnet-01407d5ae6a465b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.48/28",
            "id": "subnet-01407d5ae6a465b04",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331224114753",
            "tags": {
              "name": "Public Subnet for VPC"
            },
            "tags_all": {
              "name": "Public Subnet for VPC"
            },
            "vpc_id": "vpc-037b92902ddca07db"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331224114753:vpc/vpc-037b92902ddca07db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-05b5e0fd8677e117e",
            "default_route_table_id": "rtb-036722aeffbd7d141",
            "default_security_group_id": "sg-0a4a1104d97b589c8",
            "dhcp_options_id": "dopt-3a01c05c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-037b92902ddca07db",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-036722aeffbd7d141",
            "owner_id": "331224114753",
            "tags": {
              "name": "New-VPC-Lambda"
            },
            "tags_all": {
              "name": "New-VPC-Lambda"
            }
          }
        }
      ]
    }
  ]
}